closed deals update
